<resources>
    <string name="app_name">Gro Corner</string>

    <string name="mobile_number_blank_error_message">Mobile number can\'t be empty</string>
    <string name="mobile_number_invalid_error_message">Please enter valid mobile number to proceed</string>
    <string name="otp_invalid_error_message">Please enter valid OTP to proceed</string>
    <string name="generic_error_message">Something went wrong</string>

    <string name="login_button_text">Login Using OTP</string>
    <string name="login_text">Login</string>
    <string name="mobile_number_hint">Mobile Number</string>
    <string name="sign_up_using_otp">Sign-up using OTP</string>

    <string name="on_boarding_explore_header">Explore</string>
    <string name="on_boarding_explore_sub_header">Find product for your home easily by swipe and scroll</string>
    <string name="on_boarding_payment_header">Pay It</string>
    <string name="on_boarding_payment_sub_header">Process payment for your purchased items with your favourite payment method</string>
    <string name="on_boarding_delivery_header">Fast Delivery</string>
    <string name="on_boarding_delivery_sub_header">Within our dedicated delivery partner you\'ll get your items fast</string>
    <string name="on_boarding_get_started_text">Get Started</string>

    <string name="add_to_cart">Add</string>
    <string name="decrement">-</string>
    <string name="increment">+</string>
    <string name="home">Home</string>
    <string name="category">Categories</string>
    <string name="offers">Offers</string>
    <string name="cart">Cart</string>
    <string name="order_accepted_label">Order Accepted</string>
    <string name="order_number_message">Your Order No. #%1$s has been placed</string>
    <string name="track_order">Track Order</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="order_history">Order History</string>
    <string name="store_locator">Store Locator</string>
    <string name="logout">Logout</string>
    <string name="summary">Summary</string>

    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>

    <string name="empty_field_error_message">Field must not be empty.</string>
    <string name="invalid_name_error_message">Please enter valid name to proceed</string>
    <string name="invalid_email_error_message">Please enter valid email address to proceed</string>
    <string name="invalid_phone_error_message">Please enter valid phone number to proceed</string>
    <string name="add_new_address">Add New Address</string>
</resources>