<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/categoryFragment"
        android:enabled="true"
        android:icon="@drawable/ic_category"
        android:title="@string/category" />
    <item
        android:id="@+id/menu_offer"
        android:enabled="true"
        android:icon="@android:drawable/ic_delete"
        android:title="@string/offers" />
    <item
        android:id="@+id/cartFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/cart" />

</menu>