<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.order_confirmation.fragment.OrderConfirmationFragment">

    <ImageView
        android:id="@+id/confirmation_image_iv"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_delivery"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/order_accepted_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_2x_large"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/order_accepted_label"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmation_image_iv" />

    <TextView
        android:id="@+id/order_number_message_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_2x_large"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:paddingStart="@dimen/space_4x_large"
        android:paddingEnd="@dimen/space_4x_large"
        android:text="@string/order_number_message"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_accepted_label" />

    <com.animation.animpresseffect.PressEffectButton
        android:id="@+id/track_order_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_2x_large"
        android:layout_marginTop="@dimen/space_2x_large"
        android:layout_marginEnd="@dimen/space_2x_large"
        android:background="@drawable/oval_shape_orange"
        android:fontFamily="@font/montserrat"
        android:text="@string/track_order"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_number_message_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>
